main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <description>Milestone</description>
    <label>Milestone &amp; Checkpoint</label>
    <nameField>
        <label>Journey Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones &amp; Checkpoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>