main/default/objects/Milestone__c/fields/Add_Quick_Check_Begin_Button__c.field-meta.xml
<CustomField>
    <fullName>Add_Quick_Check_Begin_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggles on/off the Add Quick Check Begin Button</description>
    <label>Add Quick Check Begin Button</label>
    <type>Checkbox</type>
</CustomField>