main/default/objects/Milestone__c/fields/Attestation_Completion_Button__c.field-meta.xml
<CustomField>
    <fullName>Attestation_Completion_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggles on off the Attestation Completion Button in the journey dashboard</description>
    <label>Attestation Completion Button</label>
    <type>Checkbox</type>
</CustomField>