main/default/objects/Milestone__c/fields/Attestation_Completion_Button_Text__c.field-meta.xml
<CustomField>
    <fullName>Attestation_Completion_Button_Text__c</fullName>
    <description>Attestation Completion Button Text</description>
    <label>Attestation Completion Button Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>