main/default/objects/Milestone__c/fields/Catch_Up_Completion_Button__c.field-meta.xml
<CustomField>
    <fullName>Catch_Up_Completion_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CCN-843</description>
    <label>Add Catch-Up Completion Button</label>
    <type>Checkbox</type>
</CustomField>