main/default/objects/Milestone__c/fields/Checkpoint__c.field-meta.xml
<CustomField>
    <fullName>Checkpoint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates milestone as checkpoint</description>
    <label>Checkpoint</label>
    <type>Checkbox</type>
</CustomField>