main/default/objects/Milestone__c/fields/Child_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Child_Milestone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates child milestone</description>
    <label>Child Milestone</label>
    <type>Checkbox</type>
</CustomField>