main/default/objects/Milestone__c/fields/Display_In_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Display_In_Dashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Child Card on Dashboard</label>
    <type>Checkbox</type>
</CustomField>