main/default/objects/Milestone__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Stores (Event, Survey) URL</description>
    <label>Link</label>
    <type>Url</type>
</CustomField>