main/default/objects/Milestone__c/fields/Milestone_Completed__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates milestone completion.
End Date &lt; Current Date</description>
    <label>Milestone Completed</label>
    <type>Checkbox</type>
</CustomField>