main/default/objects/Milestone__c/fields/Milestone_Started__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that milestone has started based on the start date

Current date &gt;= start date 
and
Current date &lt;= end date</description>
    <label>Milestone Started</label>
    <type>Checkbox</type>
</CustomField>