main/default/objects/Milestone__c/fields/Milestone_URL__c.field-meta.xml
<CustomField>
    <fullName>Milestone_URL__c</fullName>
    <description>URL for Milestone</description>
    <label>Journey Milestone Card Link</label>
    <type>Url</type>
</CustomField>