main/default/objects/Milestone__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the milestone tagged as checkpoint</description>
    <label>Checkpoint Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Milestone__c.Journey__c</field>
            <operation>equals</operation>
            <valueField>$Source.Journey__c</valueField>
        </filterItems>
        <filterItems>
            <field>Milestone__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Checkpoint</value>
        </filterItems>
        <filterItems>
            <field>Milestone__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Milestones &amp; Checkpoints</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>