main/default/objects/Milestone__c/fields/Quick_Check_Begin_Button_Text__c.field-meta.xml
<CustomField>
    <fullName>Quick_Check_Begin_Button_Text__c</fullName>
    <description>Displays the Quick Check Begin Button Text</description>
    <label>Quick Check Begin Button Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>