main/default/objects/Milestone__c/fields/Related_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Related_RecordId__c</fullName>
    <description>Contains the related record id (Could be Event, Session, Survey or Communication)</description>
    <label>Related Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>