main/default/objects/Milestone__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Milestones &amp; Checkpoints</relationshipLabel>
    <relationshipName>Milestones_Checkpoints</relationshipName>
    <type>Lookup</type>
</CustomField>