main/default/objects/Milestone__c/fields/Session_Catch_Up_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Catch_Up_End_Date__c</fullName>
    <label>Session Catch-Up End Date/Time</label>
    <type>DateTime</type>
</CustomField>