main/default/objects/Milestone__c/fields/Session_Catchup_Start_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Session_Catchup_Start_Date_2__c</fullName>
    <formula>Session__r.Catchup_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Catch-Up Start Date/Time 2</label>
    <type>DateTime</type>
</CustomField>