main/default/objects/Milestone__c/fields/Show_Catch_up_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Catch_up_Button__c</fullName>
    <formula>Is_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Catch-up Button</label>
    <type>Checkbox</type>
</CustomField>