main/default/objects/Milestone__c/fields/Survey_Completion_Button__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completion_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggles Survey Completion Button on Survey Milestones on Journey dashboard</description>
    <label>Add Survey Completion Button</label>
    <type>Checkbox</type>
</CustomField>