main/default/objects/Milestone__c/fields/Survey_Completion_Button_Text__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completion_Button_Text__c</fullName>
    <description>Stores Survey Completion Button Text displayed on the Survey milestones</description>
    <label>Survey Completion Button Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>