main/default/objects/Milestone__c/fields/Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Type_Formula__c</fullName>
    <description>Displays either Checkpoint or Milestone Type</description>
    <formula>IF(RecordType.Name == &apos;Checkpoint&apos;, &apos;Checkpoint&apos;,  TEXT(Type__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journey Milestone Type</label>
    <type>Text</type>
</CustomField>