main/default/objects/Milestone__c/recordTypes/Checkpoint.recordType-meta.xml
<RecordType>
    <fullName>Checkpoint</fullName>
    <active>true</active>
    <label>Checkpoint</label>
</RecordType>