main/default/objects/Milestone__c/recordTypes/Milestone.recordType-meta.xml
<RecordType>
    <fullName>Milestone</fullName>
    <active>true</active>
    <label>Milestone</label>
</RecordType>