main/default/objects/Milestone__c/validationRules/Milestone_Completed_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Milestone_Completed_Validation</fullName>
    <active>true</active>
    <description>Whenever the user updates the End Date of a Milestone and Milestone Started checkbox=true</description>
    <errorConditionFormula>AND(   ISCHANGED(End_Date__c) , Milestone_Completed__c )</errorConditionFormula>
    <errorDisplayField>Milestone_Completed__c</errorDisplayField>
    <errorMessage>Please deselect the Milestone Completed checkbox.</errorMessage>
</ValidationRule>