main/default/objects/Milestone__c/validationRules/Milestone_Started_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Milestone_Started_Validation</fullName>
    <active>true</active>
    <description>Whenever the user updates the Start Date of a Milestone and Milestone Started checkbox=true</description>
    <errorConditionFormula>AND(   ISCHANGED(Start_Date__c) , Milestone_Started__c )</errorConditionFormula>
    <errorDisplayField>Milestone_Started__c</errorDisplayField>
    <errorMessage>Please deselect the Milestone Started checkbox.</errorMessage>
</ValidationRule>