main/default/objects/Milestone__c/validationRules/Validate_Survey_Completion_Button_Text.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Survey_Completion_Button_Text</fullName>
    <active>true</active>
    <description>This enforces Survey Completion Button Text when Survey Completion Button Text is enabled</description>
    <errorConditionFormula>AND( Survey_Completion_Button__c,  ISBLANK(Survey_Completion_Button_Text__c) )</errorConditionFormula>
    <errorDisplayField>Survey_Completion_Button_Text__c</errorDisplayField>
    <errorMessage>Survey Completion Button Text is required.</errorMessage>
</ValidationRule>